[gd_scene load_steps=2 format=3 uid="uid://dev5yu2nk21gj"]

[ext_resource type="Script" path="res://Scripts/snow_2.gd" id="1_8tvgl"]

[node name="Snow" type="Node2D"]
script = ExtResource("1_8tvgl")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 10000
emission_shape = 3
emission_rect_extents = Vector2(7000, 1000)
direction = Vector2(-0.707, 0.707)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 0.0
scale_amount_max = 5.0

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
visible = false
amount = 10000
emission_shape = 3
emission_rect_extents = Vector2(7000, 1000)
direction = Vector2(-0.707, 0.707)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 200.0
scale_amount_min = 0.0
scale_amount_max = 5.0

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
visible = false
amount = 10000
emission_shape = 3
emission_rect_extents = Vector2(7000, 1000)
direction = Vector2(-0.707, 0.707)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 300.0
scale_amount_min = 0.0
scale_amount_max = 5.0

[node name="CPUParticles2D4" type="CPUParticles2D" parent="."]
visible = false
amount = 10000
emission_shape = 3
emission_rect_extents = Vector2(7000, 1000)
direction = Vector2(-0.707, 0.707)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 350.0
initial_velocity_max = 400.0
scale_amount_min = 0.0
scale_amount_max = 5.0

[node name="CPUParticles2D5" type="CPUParticles2D" parent="."]
visible = false
amount = 10000
emission_shape = 3
emission_rect_extents = Vector2(7000, 1000)
direction = Vector2(-0.707, 0.707)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 350.0
initial_velocity_max = 400.0
scale_amount_min = 0.0
scale_amount_max = 5.0
